Added link back to home page

--- a/index.htm
+++ b/index.htm
@@ -115,6 +115,9 @@
 <div align="center"><b>Assaf Urieli</b> - CLLE-ERSS: CNRS & University of Toulouse. <tt>assaf.urieli@univ-tlse2.fr</tt></div>
 <div align="center"><b>Jean-Philippe Fauconnier</b> - IRIT: CNRS & University of Toulouse. <tt>jean-philippe.fauconnier@irit.fr</tt></div>
 <br/>
+<br/>
+<div align="center"><a href="http://redac.univ-tlse2.fr/applications/talismane/talismane_en.html" target="_parent">Back to Talismane home page...</a></div>
+<br/>
 <div class="tocTitle">Table of Contents</div>
 <div id="toc"></div>
 
