Changed reference to TALN 2013 article

--- a/index.htm
+++ b/index.htm
@@ -184,9 +184,9 @@ You are free to copy, distribute and transmit the work, and to adapt the work un
 <li>You may not use this work for commercial purposes.</li>
 <img src="./pics/logo.png" alt="Logo CC BY-NC 3.0"/>
 
-<h2>How to cite us?</h2>
-<p>To cite us, please use the following notation:</p>
-<div class="reference">Urieli, A. and Fauconnier, J., <i>Talismane User Manual</i>, Toulouse, CLLE-ERSS, 2012.</div>
+<h2>How to cite Talismane?</h2>
+<p>To cite Talismane, please use the following publication:</p>
+<div class="reference">Urieli, Assaf et Tanguy, Ludovic (2013). L’apport du faisceau dans l’analyse syntaxique en dépendances par transitions : études de cas avec l’analyseur Talismane. <i>Conférence sur le traitement  automatique des langues naturelles (TALN'13).</i> Les Sables d'Olonne, France.</div>
 
 <h2>Typographic conventions</h2>
 <p>Various typographic conventions will be used in the present document.</p>
